--- a/vue-course/问题.html
+++ b/vue-course/问题.html
@@ -9,6 +9,11 @@
 <body>
     <script>
         //====$nextTick的使用
+        
+        //====data里的的属性的子属性如果再再次赋值没有时需要设置，设置有以下形式，如何区分？？
+        //Vue.set(item,'checked',true);
+		// 全局注册 往item注册一个checked 值为true
+        // this.$set(item,'checked',true);//局部注册 加$
 
     </script>
 </body>
