--- a/vue-course/问题.html
+++ b/vue-course/问题.html
@@ -9,6 +9,8 @@
 <body>
     <script>
         //====$nextTick的使用
+
+        //可以把赋值的变量通过事件传回来，如果进行修改，data里对应的属性数据也是会发生变化
         
         //====data里的的属性的子属性如果再再次赋值没有时需要设置，设置有以下形式，如何区分？？
         //Vue.set(item,'checked',true);
