--- a/vue-course/问题.html
+++ b/vue-course/问题.html
@@ -17,6 +17,8 @@
 		// 全局注册 往item注册一个checked 值为true
         // this.$set(item,'checked',true);//局部注册 加$
 
+        //==== watch的用法
+
     </script>
 </body>
 </html>
