--- a/vue-course/问题.html
+++ b/vue-course/问题.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+
 <body>
     <script>
         //====$nextTick的使用
 
         //可以把赋值的变量通过事件传回来，如果进行修改，data里对应的属性数据也是会发生变化
-        
+
         //====data里的的属性的子属性如果再再次赋值没有时需要设置，设置有以下形式，如何区分？？
         //Vue.set(item,'checked',true);
 		// 全局注册 往item注册一个checked 值为true
@@ -19,6 +21,12 @@
 
         //==== watch的用法
 
+        //==== 自定义事件的组件v-model
+
+        //==== 作用域插槽
+
+
     </script>
 </body>
+
 </html>
