--- a/vue-course/2.1.插值.html
+++ b/vue-course/2.1.插值.html
@@ -21,10 +21,10 @@
 		var app = new Vue({
 			el: '#app',
 			data: {
-				message: 'Hello Vue!!', //插值，能进行简单的表达式操作
+				message: 'Hello Vue!!', //1.插值，能进行简单的表达式操作
+				noChange: '不能更改的值', //2.一次性地插值,不能更改的插值，当数据改变时，插值处的内容不会更新
+				htmls: '<h2>我是标题<span></span></h2>', //3.插值会解析代码
 				id: 2, //属性赋值
-				htmls: '<h2>我是标题<span></span></h2>', //插值会解析代码
-				noChange: '不能更改的值', //不能更改的插值，当数据改变时，插值处的内容不会更新
 				isButtonDisabled: true
 			}
 		})
