--- a/vue-course/案例/vue-development/案例-任务.html
+++ b/vue-course/案例/vue-development/案例-任务.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
@@ -11,26 +12,32 @@
 			margin-right: 20px;
 			line-height: 30px;
 		}
+
 		.task-count .action a.active {
 			color: red;
 		}
+
 		.todo-list .todo {
 			line-height: 30px;
 			border-bottom: 1px #ccc solid;
 		}
+
 		.todo-list .todo .view {
 			display: inline-block;
 		}
+
 		.todo-list .todo .edit {
 			display: none;
 		}
+
 		.todo-list .editing .view {
 			display: none;
 		}
+
 		.todo-list .editing .edit {
 			display: block;
 		}
-		
+
 		.comp label {
 			color: #999;
 			text-decoration: line-through;
@@ -38,19 +45,20 @@
 	</style>
 	<script src="https://unpkg.com/vue/dist/vue.js"></script>
 </head>
+
 <body>
 	<div class="main">
 		<h2 class="big-title">添加任务列表</h2>
 		<input type="text" class="task-input" placeholder="回车添加任务" v-model="todo" v-on:keyup.13="addTodo">
-		
+
 		<ul class="task-count" v-show="list.length">
 			<li>{{noCheckedLen}}
-			<!-- {{ 
+				<!-- {{ 
 				list.filter(function(item) {
 					return !item.isChecked
 				}).length
 			}} -->
-			个任务未完成</li>
+				个任务未完成</li>
 			<li class="action">
 				<a href="#all" class="active">所有任务</a>
 				<a href="#unfinished" class="">未完成的任务</a>
@@ -68,41 +76,35 @@
 						<label @dblclick="edtorTodo(item)">{{item.title}}</label>
 						<button class="destroy" @click="delTodo(item)">删除</button>
 					</div>
-					<input class="edit" 
-					type="text" 
-					v-focus="item ===edtorTodos" 
-					v-model="item.title"
-					@blur="edtoredTodo(item)"
-					@keyup.13="edtoredTodo(item)"
-					@keyup.esc="cancelTodo(item)"
-					/>
+					<input class="edit" type="text" v-focus="item ===edtorTodos" v-model="item.title" @blur="edtoredTodo(item)" @keyup.13="edtoredTodo(item)"
+					 @keyup.esc="cancelTodo(item)" />
 				</li>
 			</ul>
 		</div>
-			
+
 	</div>
-	
+
 	<script>
-	// ==== input身上的选中或不选中，可以直接用v-model
+		// ==== input身上的选中或不选中，可以直接用v-model
 		var store = {
-			save: function(key,value) {
-				localStorage.setItem(key,JSON.stringify(value));
+			save: function (key, value) {
+				localStorage.setItem(key, JSON.stringify(value));
 			},
-			fetch: function(key) {
+			fetch: function (key) {
 				return JSON.parse(localStorage.getItem(key)) || [];
 			}
 		};
 		var filter = {
-			all: function(list) {
+			all: function (list) {
 				return list;
 			},
-			finished: function(list) {
-				return list.filter(function(item) {
+			finished: function (list) {
+				return list.filter(function (item) {
 					return item.isChecked
 				})
 			},
-			unfinished: function(item) {
-				return list.filter(function(item) {
+			unfinished: function (item) {
+				return list.filter(function (item) {
 					return !item.isChecked
 				})
 			}
@@ -136,21 +138,21 @@
 				}*/
 				//深度监控
 				list: {
-					handler: function() {
-						store.save('lsl',this.list);
+					handler: function () {
+						store.save('lsl', this.list);
 					},
 					deep: true
 				}
 			},
 			computed: {
-				noCheckedLen: function() {
-					return this.list.filter(function(item) {
+				noCheckedLen: function () {
+					return this.list.filter(function (item) {
 						return !item.isChecked
-					}).length 
+					}).length
 				},
-				filteredList: function() {
+				filteredList: function () {
 					//过滤的时候有三种情况 all finished unfinished
-					
+
 					//找到了过滤函数就返回过滤后的数据，如果没有就返回所有的数据
 					return filter[this.visibility] ? filter[this.visibility](list) : list;
 				}
@@ -158,7 +160,7 @@
 			methods: {
 				//<input type="text" class="task-input" placeholder="回车添加任务" v-model="todo" v-on:keyup.13="addTodo">
 				//v-on:keyup.13="addTodo(123,$event)"如果要传参数，可以加括号传递，$event表示事件对象
-				addTodo: function(data,ev) {
+				addTodo: function (data, ev) {
 					//console.log(data,ev)
 					this.list.push({
 						title: this.todo,
@@ -166,19 +168,19 @@
 					})
 					this.todo = '';
 				},
-				delTodo: function(todo) {
+				delTodo: function (todo) {
 					var index = this.list.indexOf(todo);
-					this.list.splice(index,1);
+					this.list.splice(index, 1);
 				},
-				edtorTodo: function(todo) {
+				edtorTodo: function (todo) {
 					//编辑这条任务的时候，记录一下编辑这条任务的title,方便在取消编辑的时候重新给之前的值
 					this.beforeTitle = todo.title;
 					this.edtorTodos = todo;
 				},
-				edtoredTodo: function(todo) {
+				edtoredTodo: function (todo) {
 					this.edtorTodos = '';
 				},
-				cancelTodo: function(todo) {
+				cancelTodo: function (todo) {
 					todo.title = this.beforeTitle;
 					this.beforeTitle = '';
 					//让div显示出来，input隐藏
@@ -188,21 +190,22 @@
 			directives: {//自定义指令
 				"focus": {
 					//参数一：指令绑定的元素，binding指令的一些内容
-					update: function(el,binding) {
+					update: function (el, binding) {
 						//console.log(el,binding)
-						if(binding.value) {
+						/* if(binding.value) {
 							el.focus();
-						}
+						} */
 					}
 				}
 			}
 		})
-		
+
 		function watchHashChange() {
 			var hash = window.location.hash.slice(1);
 			app.visibility = hash;
 		}
-		window.addEventListener('hashchange',watchHashChange);
+		window.addEventListener('hashchange', watchHashChange);
 	</script>
 </body>
+
 </html>
